syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";
// Version: 5.0
// CmdId: 9762

import "UnionCmd.proto";

message UnionCmdNotify {
    repeated UnionCmd cmd_list = 6;
}